test/parse/fail/ambiguousIndent.em
# Expect failure

a b (c
	d
	e)
f